# jax_inverse

./: .gitignore  README.md  jax_ext_inverse.py  main.py  pyproject.toml
tests/: test_inverse.py
