[project]
name = "jax_extensions"
version = "0.1.0"
description = "A Python library of JAX extensions."
authors = [{ name="Liam Adams" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "jax"
]


[project.urls]
Homepage = "https://github.com/l90lpa/jax_extensions"
Repository = "https://github.com/l90lpa/jax_extensions"
Issues = "https://github.com/l90lpa/jax_extensions/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jax_extensions"]

[tool.pytest.ini_options]
testpaths = ["tests",]